feat(P4ADEV-2798): corected comments from PR